fix register bugs/ info tool not showing properly, wrong history.push

--- a/src/blocks/footer/footer.css
+++ b/src/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   width: 100%;
   max-width: 880px;
-  margin: 0 auto 20px;
+  margin: 60px auto 20px;
 }
 
 .footer>h1 {
